add header on app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -481,4 +481,6 @@
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<h1>ZULU HAIR SALONE</h1>
+
 <router-outlet></router-outlet>
